# slapi-nis

./: Makefile  README.md  slapi-0001-Move-advance-definition-of-backend_passwdmod_extop-b.patch  slapi-0002-Initialize-ret-before-use.patch  slapi-0003-slapi-nis-resolve-IPA-groups-with-fully-qualified-su.patch  slapi-0004-Declare-int-backend_init_extop-for-reuse-in-plug-sch.patch  slapi-0005-Double-free-on-ldap-entry-during-priming.patch  slapi-0006-back-sch-do-not-clobber-target-of-the-pblock-for-idv.patch  slapi-0007-back-sch-nss-for-users-with-aliases-return-alias-as-.patch  slapi-0011-Move-a-helper-to-build-DN-to-a-format.c.patch  slapi-0012-Add-dummy-handler-for-a-related-add-delete-modify-to.patch  slapi-0013-track-changes-to-ID-overrides-and-evict-map-cache-en.patch  slapi-0015-configure.ac-detect-extended-NSS-API-provided-by-SSS.patch  slapi-0016-schema-compat-add-support-for-timeout-based-NSS-quer.patch  slapi-0017-Fix-nss_sss-callers.patch  slapi-0017-back-sch-cancel-memberof-retrieval-in-case-of-a-dirs.patch  slapi-0018-Clean-up-unused-code.patch  slapi-0019-Synchronize-nsswitch-backend-code-with-freeIPA.patch  slapi-0020-Use-extended-SSSD-API-to-signal-that-an-entry-should.patch  slapi-0100-deadlok-between-write-and-search-operation.patch  slapi-nis-0.40-entryaddremove.patch  slapi-nis-0.40-leak.patch  slapi-nis-0.40-multiplex.patch  slapi-nis-0.40-notxns.patch  slapi-nis-0.40-xdrfree.patch  slapi-nis-0.40-xdrfree2.patch  slapi-nis-0.40.tar.gz.sig  slapi-nis-0.54.tar.gz.sig  slapi-nis-0.56.0.tar.gz.sig  slapi-nis-ID-views-ignore-searches-for-views-outside-the-subtrees.patch  slapi-nis-delay-sending-responses-from-compat-tree-a.patch  slapi-nis-don-t-search-in-SSSD-when-memberUid-has-no.patch  slapi-nis-extmem-0005-slapi-nis-populate-data-trees-asynchronously-after-L.patch  slapi-nis-extmem-0006-nss-force-lower-case-for-memberUid-attribute-as-per-.patch  slapi-nis-extmem-0007-slapi-nis-add-support-to-resolve-external-members-of.patch  slapi-nis-extmem-0008-slapi-nis-process-requests-only-when-initialization-.patch  slapi-nis-extmem-0009-slapi-nis-serialize-map-cache-initialization.patch  slapi-nis-extmem-0010-nis-lock-out-accounts-if-nsAccountLock-is-TRUE.patch  slapi-nis-extmem-0011-idviews-bind-with-original-DN-if-ID-view-does-not-ov.patch  slapi-nis-fix-processing-of-ID-views.patch  (+12 more)
src/: COPYING  Makefile.am  Makefile.in  NEWS  README  STATUS  aclocal.m4  configure  configure.ac  slapi-nis.spec
src/doc/: betxn-notes.txt  format-specifiers.txt  nis-configuration.txt  nis-getting-started.txt  nis-known-maps.txt  sch-configuration.txt  sch-getting-started.txt
src/doc/devel/: index-memberof.ldif  migrate-nis.sh  nis-compatibility.txt  nis-design.txt  sch-design.txt  todo.txt
src/doc/examples/: nis-plugin-example.ldif.in  sch-plugin-example.ldif.in
src/doc/ipa/: nis-migration.txt  sch-ipa.txt
src/src/: Makefile.am  Makefile.in  back-nis.c  back-sch-idview.c  back-sch-nss.c  back-sch-pam.c  back-sch.c  back-sch.h  back-shr.c  back-shr.h  backend.h  config.h.in  defs-nis.c  defs-nis.h  disp-nis.c  disp-nis.h  dummymap.c  format.c  format.h  map.c  map.h  nis.c  nis.h  nisserver-plugin-defs.1  nisserver-plugin-defs.1.in  plug-nis.c  plug-sch.c  plugin.h  portmap.c  portmap.h  wrap.c  wrap.h
src/tests/: Makefile.am  Makefile.in  run-tests.sh  slapd.sh.in  slapi-nis.supp  wrap-nsswitch.c  wrap-pam.c
src/tests/clients/: Makefile.am  Makefile.in  ldifsort.c  yp.c  yp_clnt.c  yp_xdr.c  ypmaplist.py
src/tests/config/: dse.ldif.initial.in  dse.ldif.memberof.in  dse.ldif.mep.in  dse.ldif.refint.in  dse.ldif.usn.in  userRoot.ldif
src/tests/test00-nis-add-map/: after.txt  before.sh  change.sh  description.txt
src/tests/test00-schema-add-set/: change.sh  change.txt  description.txt
src/tests/test01-nis-del-map/: change.sh  description.txt  dse.ldif
src/tests/test01-schema-remove-set/: after.sh  change.sh  description.txt
src/tests/test02-nis-modrdn-map/: after.sh  after.txt  change.sh  change.txt
src/tests/test02-schema-modrdn-set/: change.sh  change.txt  description.txt
src/tests/test03-nis-modify-map/: change.sh  description.txt
src/tests/test03-schema-modify-set/: after.txt  before.txt  change.sh  change.txt  description.txt
src/tests/test04-nis-modify-map/: before.txt  change.sh  description.txt  dse.ldif
src/tests/test04-schema-modify-set/: after.txt  change.sh  description.txt  dse.ldif
src/tests/test05-nis-modify-map/: after.txt  change.sh  change.txt  description.txt
src/tests/test05-schema-modify-set/: after.txt  change.sh  description.txt
src/tests/test06-nis-modify-map/: change.sh  description.txt  dse.ldif
src/tests/test07-nis-add-entry/: before.txt  change.sh  change.txt  description.txt
src/tests/test07-schema-add-entry/: after.txt  change.sh  description.txt
src/tests/test08-nis-remove-entry/: change.sh  description.txt
src/tests/test08-schema-remove-entry/: after.txt  change.sh  description.txt
src/tests/test09-nis-modrdn-entry/: before.txt  change.sh  description.txt
src/tests/test09-schema-modrdn-entry/: change.sh  description.txt
src/tests/test10-nis-modrdn-entry/: after.txt  change.sh  description.txt  dse.ldif  userRoot.ldif
src/tests/test10-schema-modrdn-entry/: after.txt  change.sh  description.txt
src/tests/test11-nis-modify-entry/: after.txt  change.sh  description.txt
src/tests/test11-schema-modify-entry/: after.txt  before.txt  change.sh  change.txt  description.txt
src/tests/test12-nis-modify-entry/: after.txt  before.txt  change.sh  change.txt  description.txt  dse.ldif
src/tests/test12-schema-modify-entry/: after.sh  after.txt  change.sh  dse.ldif
src/tests/test13-nis-modify-entry/: after.txt  before.txt  description.txt  dse.ldif
src/tests/test13-schema-modify-entry/: after.txt  description.txt  dse.ldif
src/tests/test14-nis-domain/: after.sh  after.txt  before.txt  description.txt
src/tests/test14-schema-scope/: before.sh  before.txt  description.txt
src/tests/test15-nis-master/: after.sh  after.txt  before.sh  before.txt  description.txt
src/yp/: Makefile.am  Makefile.in
(+233 files in other folders)
